adding ids and time filter
