# b-service/router/router.go
@@ -12,16 +12,16 @@ func bindSensor(e *echo.Group, sensorRouter *sensorRouter.SensorRouter) error {
 	if router == nil {
 		return fmt.Errorf("router is empty %v", router)
 	}
-	e.GET("/sensor", router.GetSensorDataPaginated)                    //with no q-param
-	e.GET("/sensor/ids", router.GetSensorDataById)                     //with no q-param id
-	e.GET("/sensor/time", router.GetSensorDataByTime)                  //with no q-param time
-	e.GET("/sensor/id-time", router.GetSensorDataByIdAndTime)          //with no q-param id and time
-	e.DELETE("/sensor/delete/id", router.DeleteSensorById)             //with no q-param id
-	e.DELETE("/sensor/delete/time", router.DeleteSensorByTime)         //with no q-param time
-	e.DELETE("/sensor/delete/id-time", router.DeleteSensorByIdAndTime) //with no q-param id and time
-	e.PUT("/sensor/update/id", router.UpdateSensorById)                //with no q-param id
-	e.PUT("/sensor/update/time", router.UpdateSensorByTime)            //with no q-param time
-	e.PUT("/sensor/update/id-time", router.UpdateSensorByIdAndTime)    //with no q-param id and time
+	e.GET("/sensor", router.GetSensorDataPaginated)                      //with no q-param
+	e.GET("/sensor/ids", router.GetSensorDataByIds)                      //with no q-param id
+	e.GET("/sensor/time", router.GetSensorDataByTime)                    //with no q-param time
+	e.GET("/sensor/ids-time", router.GetSensorDataByIdsAndTime)          //with no q-param id and time
+	e.DELETE("/sensor/delete/ids", router.DeleteSensorByIds)             //with no q-param id
+	e.DELETE("/sensor/delete/time", router.DeleteSensorByTime)           //with no q-param time
+	e.DELETE("/sensor/delete/ids-time", router.DeleteSensorByIdsAndTime) //with no q-param id and time
+	e.PUT("/sensor/update/ids", router.UpdateSensorByIds)                //with no q-param id
+	e.PUT("/sensor/update/time", router.UpdateSensorByTime)              //with no q-param time
+	e.PUT("/sensor/update/ids-time", router.UpdateSensorByIdsAndTime)    //with no q-param id and time
 	return nil
 }
 
